FRI-122 Added build status checks before trigger build and removed duplicate status update in the SRSWorkerService